<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_CraneStates" Id="{3d323f4e-c8b3-4101-bd4d-63dd3ba043a6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CraneStates :
(
	Auto,
	Manual,
	Off
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>