<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Timer" Id="{d5ad258e-5f85-4dee-a741-b0cfa1e2211a}">
    <Declaration><![CDATA[// Task 2
TYPE ST_Timer :
STRUCT
	bStartTimer				: BOOL				:= FALSE;
	bTimerOutput			: BOOL				:= FALSE;
	tElapsedTime			: TIME				:= T#0S;
	tTimer					: TIME;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>